# TotalGB

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  index.data  index.html  index.js  index.wasm  meson.build  meson_options.txt
android/: CMakeLists.txt  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLAudioManager.java
android/app/src/main/java/org/libsdl/totalgb/: SettingsActivity.java  totalgbActivity.java
android/app/src/main/res/drawable/: ic_video_settings_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_video_settings.xml
android/app/src/main/res/values/: arrays.xml  strings.xml
android/app/src/main/res/xml/: root_preferences.xml
cmake/: devkitpro.cmake
cross/: armcc.txt  linux-mingw-w64-32bit.txt  wasm.txt
docs/: _config.yml  index.html  index.js  index.md  index.wasm  (+1 more)
examples/: CMakeLists.txt  example_emscripten.html  example_mmap.c  example_sdl.c
examples/gamecube/: CMakeLists.txt  main.c
extras/cheats/: CMakeLists.txt
extras/cheats/codebreaker/: CMakeLists.txt  codebreaker.c  codebreaker.h
extras/cheats/gamegenie/: CMakeLists.txt  gamegenie.c
extras/cheats/gameshark/: CMakeLists.txt  gameshark.c  gameshark.h
extras/patch/: CMakeLists.txt
extras/patch/ups/: ups.c
extras/zrom/: CMakeLists.txt  zrom.c  zrom.h
src/: CMakeLists.txt  bus.c  cpu.c  gb.c  gb.h  internal.h  joypad.c  main.cpp  serial.c  sgb.c  single.c  timers.c  types.h
src/accessories/: printer.c
src/apu/: apu.c  apu.h  ch1.c  ch2.c  ch3.c  ch4.c  io.c  noise.c  square1.c  square2.c  wave.c
src/core/: CMakeLists.txt  apu.c  bit.hpp  bmp.c  bmp.h  bus.c  cart.hpp  common.hpp  cpu.c  dmg.hpp  gb.c  gb.h  instructions.hpp  internal.h  joypad.c  mbc.c  mem.hpp  mmio.hpp  ppu.c  serial.c  sgb.c  single.c  timers.c  types.h
src/core/accessories/: printer.c  printer.h
src/core/apu/: apu.c  apu.h  apu_io.c  ch1.c  ch2.c  ch3.c  ch4.c  common.h  io.c  noise.c  noise.h  square1.c  square1.h  square2.c  square2.h  square_common.h  wave.c  wave.h
src/core/extra/: bmp.c  bmp.h
src/core/extra/patch/: bps.c  bps.h  common.c  common.h  crc32.c  crc32.h  ips.c  ips.h  ups.c  ups.h  util.h
src/core/mbc/: common.h  mbc.c  mbc.h  mbc_0.c  mbc_0.h  mbc_1.c  mbc_1.h  mbc_2.c  mbc_2.h  mbc_3.c  mbc_3.h  mbc_5.c  mbc_5.h
src/core/ppu/: dmg_renderer.c  gbc_renderer.c  ppu.c  ppu.h  sgb_renderer.c
src/core/tables/: cycle_table.h  cycle_table_debug.h  io_read_table.h  io_unused_bit_table.h  palette_table.c  palette_table.h
src/extras/: lz4.c  zrom.c  zrom.h
src/frontend/: events.cpp  filedialog.c  filedialog.h  main.c  main.cpp  mgb.c  mgb.cpp  mgb.h  mgb.hpp  mui.c  mui.h  romloader.c  romloader.h  types.h  types.hpp  util.c  util.h
src/frontend/audio/: interface.h
src/frontend/gui/: gui.c  gui.cpp  gui.h
src/frontend/gui/menu/: main.cpp  menu.hpp
src/frontend/gui/menus/: common.c  menu.h  menu_core_settings.c  menu_gui_settings.c  menu_help.c  menu_loadrom.c  menu_main.c
src/frontend/gui/nk/: interface.c  interface.h
src/frontend/gui/nk/gl2/: gl2.c  gl2.h
src/frontend/gui/nk/gl3/: gl3.h
src/frontend/gui/nk/gl4/: gl4.h
src/frontend/ifile/: ifile.c  ifile.h
src/frontend/ifile/cfile/: cfile.c  cfile.h
src/frontend/ifile/gzip/: gzip.c  gzip.h
src/frontend/ifile/mem/: mem.c  mem.h
src/frontend/ifile/zip/: zip.c  zip.h
src/frontend/io/: ifile_7z.cpp  ifile_7z.hpp  ifile_base.hpp  ifile_cfile.cpp  ifile_cfile.hpp  ifile_gzip.cpp  ifile_gzip.hpp  ifile_mem.cpp  ifile_mem.hpp  ifile_rar.cpp  ifile_rar.hpp  ifile_zip.cpp  ifile_zip.hpp  ifile_zstd.cpp  ifile_zstd.hpp  romloader.cpp  romloader.hpp
src/frontend/util/: log.hpp  mem.cpp  mem.hpp  rewind.cpp  rewind.hpp  util.cpp  util.hpp
src/frontend/util/io/: ifile_7z.cpp  ifile_7z.hpp  ifile_cfile.cpp  ifile_cfile.hpp  ifile_gzip.cpp  ifile_gzip.hpp  ifile_mem.cpp  ifile_mem.hpp  ifile_rar.cpp  ifile_rar.hpp  ifile_zip.cpp  ifile_zip.hpp  ifile_zstd.cpp  ifile_zstd.hpp  romloader.cpp  romloader.hpp
src/frontend/video/: interface.c  interface.h
src/frontend/video/allegro5/: allegro5_opengl.c
src/frontend/video/allegro5/base/: base.c
src/frontend/video/sdl1/: sdl1.c  sdl1.h  sdl1_opengl.c  sdl1_opengl.h
src/frontend/video/sdl1/base/: base.c  base.h
src/frontend/video/sdl2/: sdl2.c  sdl2.h  sdl2_emscripten.c  sdl2_opengl.c  sdl2_opengl.h  sdl2_vulkan.c  sdl2_vulkan.h
src/frontend/video/sdl2/base/: base.c  base.h
src/libs/imgui/: imgui_tables.cpp  imgui_widgets.cpp
src/libs/imgui/backends/: imgui_impl_mgb.cpp  imgui_impl_mgb.h  imgui_impl_opengl2.cpp  imgui_impl_opengl2.h  mgb_helper.hpp
src/libs/lzma/: Alloc.c
src/libs/minizip/: ioapi.c  ioapi.h  ioapi_mem.c  ioapi_mem.h  unzip.c  unzip.h  zip.c  zip.h
src/libs/nativefiledialog/: nfd.hpp  nfd_cocoa.m  nfd_gtk.c  nfd_gtk.cpp  nfd_win.c  nfd_win.cpp  nfd_zenity.c
src/libs/nuklear/: defines.h  nuklear.c  nuklear.h
src/libs/stb/: stb_rect_pack.c  stb_rect_pack.h  stb_truetype.c  stb_truetype.h
src/libs/zlib/: gzlib.c  gzread.c  gzwrite.c  infback.c  inftrees.c
src/mbc/: mbc.c  mbc.h  mbc_0.c  mbc_1.c  mbc_2.c  mbc_3.c  mbc_5.c
src/mgb/: CMakeLists.txt  filedialog.c  mgb.c  mgb.h  rewind.c  romloader.c  sdl_helper.c  sdl_helper.h  util.c  util.h
src/mgb/cheats/: CMakeLists.txt
src/mgb/extras/: CMakeLists.txt
src/mgb/extras/zrom/: CMakeLists.txt  zrom.c  zrom.h  zrom_cli.c
src/mgb/ifile/cfile/: cfile.c
src/mgb/ifile/gzip/: gzip.c
src/mgb/ifile/mem/: mem.h
src/mgb/ifile/zip/: zip.c  zip.h
src/ppu/: dmg_renderer.c  gbc_renderer.c  ppu.c  ppu.h  sgb_renderer.c
src/tables/: io_read_table.h  palette_table.c  palette_table.h
src/util/: CMakeLists.txt  filedialog.c  filedialog.h  romloader.c  romloader.h  util.c  util.h
src/util/ifile/: ifile.c
src/util/ifile/cfile/: cfile.c  cfile.h
src/util/ifile/gzip/: gzip.c
src/util/ifile/mem/: mem.c
src/util/ifile/zip/: zip.c  zip.h
src/wasm/: main.c  shell_minimal.html  test.bat
tests/: CMakeLists.txt  sanity.c  test_bench.c  test_sdl.c
(+40 files in other folders)
