option('gb-debug', type : 'boolean', value : false)

option('gb-builtin-palette', type : 'boolean', value : true)

option('gb-sram-size', type : 'integer', min : 0, max : 5, value : 5)

option('pixel-stride', type : 'combo',
    choices : [
      '8',
      '16',
      '32',
    ],
    value : '16',
    description : 'Select pixel stride [Default : 16]')
